# ppsspp

./: .gitignore  CMakeLists.txt  ppsspp_config.h
Common/: LogManager.cpp  MemArenaOHOS.cpp  MemArenaPosix.cpp
Common/File/: FileUtil.cpp  OHOSContentURI.cpp  OHOSContentURI.h  OHOSStorage.cpp  OHOSStorage.h  Path.cpp  Path.h
Common/GPU/OpenGL/: GLFeatures.cpp  GLFeatures.h  GLMemory.cpp  GLQueueRunner.cpp  gl3stub.c  gl3stub.cpp  gl3stub.h
Common/GPU/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanLoader.cpp  VulkanLoader.h  VulkanQueueRunner.cpp
Common/Log/: LogManager.cpp
Common/Render/Text/: draw_text.cpp  draw_text_ohos.cpp  draw_text_ohos.h
Common/UI/: Context.cpp
Core/: Instance.cpp
Core/FileLoaders/: LocalFileLoader.cpp
Core/HW/: Camera.cpp
Core/Util/: RecentFiles.cpp
UI/: DevScreens.cpp  GameSettingsScreen.cpp  MainScreen.cpp  MemStickScreen.cpp  NativeApp.cpp
ext/vulkan/: vulkan.h  vulkan_core.h
ohos/: build-profile.json5  build_config.sh  build_ffmpeg.sh  oh-package.json5
ohos/AppScope/: app.json5
ohos/AppScope/resources/base/element/: string.json
ohos/cpp/: OHOSAudio.cpp  OHOSAudio.h  OHOSGraphicsContext.h  OHOSOpenGLContext.cpp  OHOSOpenGLContext.h  OHOSVulkanContext.cpp  OHOSVulkanContext.h  OpenSLContext.cpp  OpenSLContext.h  app-ohos.cpp  app-ohos.h  napi-utils.h  ohos-log.h
ohos/cpp/libppsspp/: index.d.ts  oh-package.json5
ohos/entry/: oh-package-lock.json5  oh-package.json5
ohos/entry/src/main/: module.json5
ohos/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
ohos/entry/src/main/cpp/manager/: plugin_manager.cpp
ohos/entry/src/main/cpp/render/: egl_core.cpp  plugin_render.cpp  plugin_render.h
ohos/entry/src/main/cpp/types/libentry/: index.d.ts
ohos/entry/src/main/ets/entryability/: EntryAbility.ets
ohos/entry/src/main/ets/pages/: Index.ets  PPSSPPService.ets  constants.ts.ets
ohos/entry/src/main/resources/base/element/: string.json
ohos/ffmpeg/arm64/include/libavutil/: ffversion.h
ohos/ffmpeg/arm64/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
(+3 files in other folders)
